--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,13 +1,37 @@
-<!-- privacy-policy.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    ul {
+      padding-left: 1.5rem;
+    }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p></p>
+  <ul>
+    <li>This app does not collect, store, or transmit any personal data. It is fully offline and does not require an internet connection, except when opening external links in the user's browser (e.g., eBay or reference sites), and only at the user’s discretion.</li>
+    <li>Because no user data is collected, there is nothing to store, transmit, or share with third parties.</li>
+    <li>No analytics, crash reporting, or tracking tools are included.</li>
+    <li>This app may link to external websites such as eBay or other reference sites. Please note that once you leave the app, you are subject to the privacy policies of those third-party sites.</li>
+    <li>Affiliate links to external websites (such as eBay) may be used to provide users with quick access to related content. Clicking these links may result in a small commission, but no personal data is collected or transmitted by this app.</li>
+    <li>The app uses storage access only to allow users to import or export their collection data as CSV files and is not utilized in any other way.</li>
+    <li>For questions or concerns about this privacy policy, you may contact the developer at: <a href="reflector.soft@gmail.com">reflector.soft@gmail.com</a></li>
+  </ul>
 </body>
 </html>
