added email link and favicon

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Privacy Policy</title>
   <style>
     body {
@@ -31,7 +32,7 @@
     <li>This app may link to external websites such as eBay or other reference sites. Please note that once you leave the app, you are subject to the privacy policies of those third-party sites.</li>
     <li>Affiliate links to external websites (such as eBay) may be used to provide users with quick access to related content. Clicking these links may result in a small commission, but no personal data is collected or transmitted by this app.</li>
     <li>The app uses storage access only to allow users to import or export their collection data as CSV files and is not utilized in any other way.</li>
-    <li>For questions or concerns about this privacy policy, you may contact the developer at: <a href="reflector.soft@gmail.com">reflector.soft@gmail.com</a></li>
+    <li>For questions or concerns about this privacy policy, you may contact the developer at: <a href="mailto:reflector.soft@gmail.com">reflector.soft@gmail.com</a></li>
   </ul>
 </body>
 </html>
